@@ -1,5 +1,7 @@
 emumaster (0.0.3) unstable; urgency=low
 
+  * new ui
+  * favourites category
   * workaround for sound bug (e.g. fix Mario Kart) - thanks to javispedro
   * added name filters based on disk extension
   * unified in-game menu
